--- a/css/style.css
+++ b/css/style.css
@@ -371,7 +371,7 @@ li + .iteam {
 }
 
 .modal-link {
-  padding-left: 0.3em;
+  /* padding-left: 0.3em; */
   letter-spacing: 0.03em;
   color: #2196f3;
 }
