--- a/css/style.css
+++ b/css/style.css
@@ -384,8 +384,7 @@ li + .iteam {
   appearance: none;
 }
 
-.modal-checkbox:checked + .checkbox-icon,
-.modal-checkbox:focus-within + .checkbox-icon {
+.modal-checkbox:checked + .checkbox-icon {
   background-image: url(../images/icon-check.svg);
   background-repeat: no-repeat;
   width: 16px;
