--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,7 @@ li + .iteam {
   height: 120px;
   margin-top: 4px;
   margin-bottom: 20px;
+  padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 
@@ -392,7 +393,7 @@ li + .iteam {
   background-color: #2196f3;
   border: 2px solid transparent;
   border-radius: 2px;
-  background-size: contain;
+  background-size: 11px 8px;
   background-origin: border-box;
   background-position: center;
 }
@@ -779,16 +780,24 @@ li.svg-item-card + .svg-item-card {
 .footer-form-label {
   display: block;
   margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 
 .footer-container-input {
   display: flex;
+  align-items: center;
   position: relative;
 }
 
 .footer-form-input {
   width: 358px;
   height: 50px;
+  padding: 15px 16px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -802,6 +811,7 @@ li.svg-item-card + .svg-item-card {
   align-items: center;
   text-align: center;
 
+  height: 50px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
